--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@prisma/client": "^5.10.0",
     "@upstash/redis": "^1.36.2",
     "groq-sdk": "^0.37.0",
-    "next": "14.2.35",
+    "next": "^14.2.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stripe": "^20.3.0"
@@ -27,10 +27,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.24",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.2.25",
     "prisma": "^5.10.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5"
   }
 }
